adding percentage display for expense

--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
                     <h2 class="expenses__title">Expenses</h2>
                     
                     <div class="expenses__list">
-                       
                         <!--
                         <div class="item clearfix" id="exp-0">
                             <div class="item__description">Apartment rent</div>
@@ -96,7 +95,7 @@
                                 <div class="item__percentage">21%</div>
                                 <div class="item__delete">
                                     <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
-                                </div>
+                                </div>rking as intended - body of code not being called when it should?
                             </div>
                         </div>
 
